保存基本样式

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,1 +1,1 @@
-<web-view src="https://www.qegzw.com/index.php?mobile/ucenter.html"></web-view>
+<web-view src="https://www.qegzw.com/index.php?mobile/comm/index.html"></web-view>
